--- a/backend/uploader.html
+++ b/backend/uploader.html
@@ -3,24 +3,36 @@
   <meta charset="utf-8">
   <title>File Upload Example</title>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.9/angular.min.js"></script>
+  <style>
+    body {font-family: 'Roboto', sans-serif;}
+  </style>
   <body>
     <div ng-controller="UploadController as ctrl">
       <form ng-submit="ctrl.onSubmit()">
         <input type="file">
         <button type="submit">Upload</button>
       </form>
-      <div ng-if="!ctrl.uploadedFileUrl || ctrl.isWorking" style="margin-top: 20px; display: inline-flex; padding: 10px; border: 2px dotted #D3E4F9; border-radius: 5px; font-family: Roboto, arial;">
+      <div ng-if="!ctrl.uploadedFileUrl || ctrl.isWorking" style="margin-top: 20px; display: inline-flex; padding: 10px; border: 2px dotted #D3E4F9; border-radius: 5px;">
         <div ng-if="!ctrl.isWorking">
           Choose or paste an image to upload
           <br><br>
           <small>Tip: Use ⌘+Ctrl+Shift+4 on Mac to quickly capture screenshots to clipboard.</small>
         </div>
-        <div ng-if="ctrl.isWorking">Working...</div>
+        <div ng-if="ctrl.isWorking">
+          <div ng-if="ctrl.isError">
+            Sorry, an error occurred.
+          </div>
+          <div ng-if="!ctrl.isError">
+            Working...
+          </div>
+        </div>
       </div>
       <div ng-if="ctrl.uploadedFileUrl && !ctrl.isWorking" style="margin-top: 20px">
-        <a ng-href="{{ctrl.uploadedFileUrl}}">
-          <img ng-src="{{ctrl.uploadedFileUrl}}" style="max-width: 500px" ng-if="ctrl.isImage">
-          <span ng-if="!ctrl.isImage">{{ctrl.uploadedFileUrl}}</span>
+        <div style="margin-bottom: 20px">
+          <a ng-href="/{{ctrl.fileId}}">{{ctrl.baseUrl}}/{{ctrl.fileId}}</a>
+        </div>
+        <a ng-href="/{{ctrl.fileId}}" ng-if="ctrl.isImage">
+          <img ng-src="/{{ctrl.fileId}}" style="max-width: 500px">
         </a>
       </div>
     </div>
@@ -29,8 +41,11 @@
         this.el_ = $element[0];
         this.inputEl = this.el_.querySelector('input[type="file"]');
         this.uploadedFileUrl = null;
+        this.fileId = null;
         this.isImage = null;
         this.isWorking = false;
+        this.isError = false;
+        this.baseUrl = window.location.origin;
         this.$http = $http;
 
         document.addEventListener('paste', function(e) {
@@ -53,13 +68,17 @@
           headers: {'Content-Type': contentType},
         }).success(function(result) {
           // Can store or save gsPath in a separate form submission.
+          this.isWorking = false;
           console.log(`File was uploaded to: ${gsPath}`);
           this.uploadedFileUrl = `https://storage.googleapis.com${gsPath}`;
+        }.bind(this)).error(function(result) {
+          this.isError = true;
         }.bind(this));
       };
 
       UploadController.prototype.createSignedUrlAndUpload = function(file) {
         this.isWorking = true;
+        this.isError = false;
         let apiRoot = '/_api/create_upload_url';
         let fileName = file.name;
         let contentLength = file.size;
@@ -68,6 +87,7 @@
           let uploadUrl = resp['upload_url'];
           let contentType = resp['content_type'];
           let gsPath = resp['gs_path'];
+          this.fileId = resp['file_id'];
           this.upload(file, uploadUrl, contentType, gsPath);
         }.bind(this));
       };
