Lengthen file IDs and check for collisions

--- a/backend/uploader.html
+++ b/backend/uploader.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <meta charset="utf-8">
-  <title>File Upload Example</title>
+  <title>Uploader</title>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.9/angular.min.js"></script>
   <style>
     body {font-family: 'Roboto', sans-serif;}
